@@ -1,3 +1,8 @@
+2010-04-28  Meteor Liu  <meteor1113@gmail.com>
+
+	* init-misc.el (require): Bind ESC-f3 to highlight-symbol-at-point
+	for putty.
+
 2010-04-22  Meteor Liu  <meteor1113@gmail.com>
 
 	* lisp/unicad.el: Update unicad to 1.1.5
